--- a/package.json
+++ b/package.json
@@ -10,6 +10,19 @@
     "podman-desktop": ">=1.12.0"
   },
   "main": "./dist/extension.js",
+  "contributes": {
+    "configuration": {
+      "title": "Layers Explorer",
+      "properties": {
+        "layers-explorer.cacheSize": {
+          "type": "number",
+          "default": "100",
+          "description": "Size of cache in MB. Set to 0 to disable cache (requires restart of extension)",
+          "minimum": 0
+        }
+      }
+    }    
+  },
   "scripts": {
     "build": "vite build",
     "test": "vitest run --coverage",
