--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,8 +14,9 @@
     "skipLibCheck": true,
     "types": [
         "node",
-    ]
-},
+    ],
+    "strictNullChecks": true
+  },
 "include": [
     "src",
 ],
